--- a/html/index.html
+++ b/html/index.html
@@ -153,7 +153,7 @@
 		</div>		
 	</section>
 
-	<footer>
+	<footer id="topFooter">
 		<div class="inner container-fluid">
 			<div class="row">
 				<div class="footerMenu col-sm-6 col-md-6 container-fluid">
