パンくずリスト実装

--- a/html/company/about.html
+++ b/html/company/about.html
@@ -92,13 +92,11 @@
     COMPANY
 </div>
 
-<nav class="breadcrumb">
-    <ul>
-        <li><a href="../"><i class="fas fa-home"></i></a></li>
-        <li><a href="../conmany/index.html">会社案内</a></li>
-        <li>会社概要</li>
-    </ul>
-</nav>
+<ul class="breadcrumb">
+    <li><a href="../"><i class="fas fa-home"></i></a></li>
+    <li><a href="../conmany/index.html">会社案内</a></li>
+    <li class="active">会社概要</li>
+</ul>
 
 
 
