メインビジュアルエリア実装

--- a/html/company/about.html
+++ b/html/company/about.html
@@ -18,6 +18,7 @@
     <link rel="stylesheet" href="../common/css/style.css" type="text/css">
     <link rel="stylesheet" href="../common/css/table.css" type="text/css">
     <link rel="stylesheet" href="../common/css/breadcrumb.css" type="text/css">
+    <link rel="stylesheet" href="../common/css/mainVisual.css" type="text/css">
 
     <!--<script type="text/javascript" src="../common/js/jquery.js"></script>-->
     <script
@@ -87,13 +88,12 @@
 <!-- /header -->
 
 <div class="mainVisual">
-    クローバー
-    会社案内
-    COMPANY
+    <h2>会社概要</h2>
+    <span>ABOUT</span>
 </div>
 
 <ul class="breadcrumb">
-    <li><a href="../"><i class="fas fa-home"></i></a></li>
+    <li><a href="../index.html"><i class="fas fa-home"></i></a></li>
     <li><a href="../conmany/index.html">会社案内</a></li>
     <li class="active">会社概要</li>
 </ul>
